example/secondfile/objects/Product_Mapping__c.object
<CustomObject>
    <fields>
        <fullName>Associated_Price_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Price List</description>
        <inlineHelpText>Select associated price list</inlineHelpText>
        <label>Price List</label>
        <referenceTo>Apttus_Config2__PriceList__c</referenceTo>
        <relationshipLabel>Product Mappings</relationshipLabel>
        <relationshipName>Product_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Product_One_Selected__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>associated product 1 that is selected</description>
        <label>Product One</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Mappings</relationshipLabel>
        <relationshipName>Product_Mappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Product_Three_Selected__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Three</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Mappings (Product Three)</relationshipLabel>
        <relationshipName>Product_Mappings2_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Associated_Product_Two_Selected__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associated Second product selected</description>
        <label>Product Two</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Product Mappings (Product Two)</relationshipLabel>
        <relationshipName>Product_Mappings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BEID__c</fullName>
        <label>BEID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_Display_Name__c</fullName>
        <label>Bill Display Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Element__c</fullName>
        <label>Billing Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Combination__c</fullName>
        <formula>IF(ISBLANK(Associated_Product_Three_Selected__c), Associated_Price_List__r.Name &amp; &quot; + &quot; &amp; Associated_Product_One_Selected__r.Name &amp; &quot; + &quot; &amp; Associated_Product_Two_Selected__r.Name, Associated_Price_List__r.Name &amp; &quot; + &quot; &amp; Associated_Product_One_Selected__r.Name &amp; &quot; + &quot; &amp; Associated_Product_Two_Selected__r.Name &amp; &quot; + &quot; &amp; Associated_Product_Three_Selected__r.Name)</formula>
        <label>Combination</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Determinant_Set_Id__c</fullName>
        <label>Determinant Set Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Low_Level_Tier__c</fullName>
        <label>Low Level Tier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PBIID__c</fullName>
        <label>PBIID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rate_Amount__c</fullName>
        <label>Rate Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Product Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Bill_Display_Name__c</columns>
        <columns>Combination__c</columns>
        <columns>Associated_Product_One_Selected__c</columns>
        <columns>Associated_Product_Two_Selected__c</columns>
        <columns>Determinant_Set_Id__c</columns>
        <columns>BEID__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PM-{0000}</displayFormat>
        <label>Product Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Product Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>